# rgemu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: copy_header_files.cmake
submod/: CMakeLists.txt
submod/risa/: CMakeLists.txt
submod/risa/include/: risc_int.hpp  risc_v_32_i.hpp  risc_v_common.hpp
submod/risa/src/: test.cpp
submod/risa/test/: CMakeLists.txt  test_risc_int.cpp
